# scrape-managers

./: README.md  pyproject.toml  scrape-managers.py
data/: managers_df.csv
